dev-2.1-sprint-5: Merge branch 'dev-2.1-sprint-5-Naresh-TAgent-Issue_1142' into dev-2.1-sprint-5